# currency_rate_bot

./: bot.Dockerfile  bot.example.toml  currency_rate.Dockerfile  currency_rate.example.toml  docker-compose.yml  pyproject.toml
src/bot/: cli.py  command_mk2.py  config.py  data_structure.py  handlers.py  main.py
src/bot/adapters/: currency_rate.py  exchange.py
src/currency_rate/: cli.py  config.py  dto.py  main.py
src/currency_rate/gateways/: currency_rate.py  currency_rate_cache.py
